--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,308 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.card {
+  border: 1px solid black;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.1);
+  padding: 20px;
+  margin: 10px;
+  text-align: center;
+  max-width: 250px;
+  display: inline-block;
+  padding: 20px;
+  margin: 10px;
+  text-align: center;
+  max-width: 250px;
+  display: inline-block;
+}
+.card .card-image {
+  max-width: 60%;
+  height: auto;
+  border-radius: 10%;
+  margin-bottom: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.card .card-title {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  color: hsl(0, 0%, 20%);
+}
+.card .card-text {
+  font-family: Arial, sans-serif;
+  color: hsl(0, 0%, 30%);
+}
+.button-styling {
+  background-color: teal;
+  color: aliceblue;
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+}
+.button-styling:hover {
+  background-color: black;
+}
+.student {
+  font-familu: Arial, sans-serif;
+  font-size: 2rem;
+  padding: 10px;
+  border: 1px solid hsla(0, 0%, 50%, 0.8);
+}
+.student p {
+  margin: 0;
+}
+
+.welcome-message {
+  font-size: 2.5 rem;
+  background-color: hsl(120, 100%, 42%);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 0;
+}
+.login-prompt {
+  font-size: 2.5 rem;
+  background-color: hsl(0, 100%, 42%);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 0;
+}
+.list-category {
+  font-size: 2.5em;
+  font-weight: bold;
+  color: hsl(0, 0%, 20%);
+  margin-bottom: 10px;
+  text-align: center;
+  border: 3px solid;
+  border-radius: 5px;
+  background-color: hsla(0, 31%, 38%, 0.384);
+}
+.list-items li {
+  font-size: 2.5em;
+  margin: 0;
+  text-align: center;
+}
+.list-items li:hover {
+  cursor: pointer;
+  color: hsl(0, 0%, 30%);
+}
+.counter-container {
+  text-align: center;
+}
+.abp {
+  font-size: 10em;
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+.isrbutton {
+  background-color: blue;
+  width: 150px;
+  height: 50px;
+  font-size: 1.5em;
+
+  margin: 0px 5px;
+  color: white;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+}
+.isrbutton:hover {
+  background-color: rgb(119, 117, 117);
+}
+/* .body {
+  font-family: Arial, Helvetica, sans-serif;
+} */
+.color-picker-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+h1 {
+  margin: 50px;
+  font-size: 3rem;
+}
+.color-display {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+  border: 5px solid lightgray;
+  border-radius: 25px;
+  transition: 0.25 ease;
+}
+.color-display p {
+  color: hsl(0, 0%, 20%);
+  font-size: 2rem;
+  text-align: center;
+}
+label {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+input[type='color'] {
+  width: 75px;
+  height: 50px;
+  padding: 5px;
+  border-radius: 10px;
+  border: 3px solid hsl(0, 0%, 80%);
+}
+.to-do-list {
+  font-family: Arial, sans-serif;
+  text-align: center;
+  margin-top: 100px;
+}
+h1 {
+  font-size: 4rem;
+}
+/* button {
+  font-size: 1.7rem;
+  font-weight: bold;
+  padding: 10px 20px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.5s ease;
+} */
+.add-button {
+  background-color: rgb(76, 136, 15);
+}
+.add-button:hover {
+  background-color: rgb(46, 92, 0);
+}
+.delete-button {
+  background-color: rgb(22, 76, 177);
+}
+.delete-button:hover {
+  background-color: rgb(0, 49, 139);
+}
+.move-button {
+  background-color: rgb(214, 88, 88);
+}
+.move-button:hover {
+  background-color: rgb(175, 74, 74);
+}
+
+input[type='text'] {
+  font-size: 1.5rem;
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 5px;
+}
+ol {
+  padding: 0;
+}
+li {
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 15px;
+  background-color: hsl(0, 0%, 97%);
+  margin-bottom: 10px;
+  border: 3px solid lightgray;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+}
+.text {
+  flex: 1;
+}
+
+.delete-button,
+.move-button {
+  padding: 8px 12px;
+  font-size: 1.4rem;
+  margin-left: 10px;
+}
+
+/* body {
+  background-image: url(greenfield.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  margin: 0;
+  /*Optional */
+/* display: flex;
+  justify-content: center;
+  min-height: 100vh;
+  align-items: center;} */
+
+.clock-container {
+  backdrop-filter: blur(5px);
+  width: 100vw;
+  padding: 10px 0;
+}
+
+.clock {
+  color: white;
+  font-size: 6rem;
+  font-weight: bold;
+  font-family: monospace;
+  text-shadow: 3px 3px 5px hsla(0, 0%, 0%, 0.75);
+  padding: 10px;
+  margin: 40px 20px;
+  text-align: center;
+}
+
+.box {
+  border: 3px solid black;
+  padding: 25px;
+}
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: grey;
+}
+.stopwatch {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 5px solid;
+  border-radius: 50px;
+  background-color: white;
+  padding: 30px;
+}
+.display {
+  font-size: 5rem;
+  font-family: monospace;
+  font-weight: bold;
+  color: hsl(0, 0%, 30%);
+  text-shadow: 2px 2px 2px hsla(0, 0%, 0%, 0.75);
+  margin-bottom: 25px;
+}
+
+.controls button {
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 10px 20px;
+  margin: 5px;
+  min-width: 125px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  color: white;
+  transition: background-color 0.5s ease;
+}
+.start-button {
+  background-color: hsl(115, 100%, 40%);
+}
+.start-button:hover {
+  background-color: hsl(115, 100%, 30%);
+}
+
+.stop-button {
+  background-color: hsl(0, 93%, 47%);
+}
+.stop-button:hover {
+  background-color: hsl(0, 93%, 37%);
+}
+
+.reset-button {
+  background-color: hsl(219, 87%, 43%);
+}
+.reset-button:hover {
+  background-color: hsl(219, 87%, 33%);
 }
